<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_progress_bar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogWindow"
        android:layout_width="220dp"
        android:layout_height="340dp"

        app:layout_constraintBottom_toTopOf="@+id/textHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <ImageView
            android:id="@+id/mapDialogImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"

            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/map_1"
            android:contentDescription="@string/click_somewhere_on_the_map" />

        <LinearLayout
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#003049"

            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapDialogImage">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="#F4F4F4"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/textHolder"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center"
        android:background="#003049"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="60dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textInstructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/instruct_1"
            android:textColor="#F3F3F3"
            android:textStyle="bold"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>