<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entranceFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.entrance.EntranceFirst"
        android:background="#001A23">

        <TextView
            android:id="@+id/textView"
            android:layout_width="270dp"
            android:layout_height="150dp"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center"
            android:text="@string/entrance_text"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:translationZ="2dp"
            android:paddingHorizontal="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.433" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/entrance_text_2"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:translationZ="2dp"
            android:layout_marginTop="25dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/navigatorButton"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:background="@drawable/background_pick_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/location_edited_light"
            android:translationZ="15dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>