<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#001A23">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/navigation_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/vector_menu"
            android:translationZ="1dp"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true"
            android:contentDescription="@string/menuopenimage" />

        <TextView
            android:id="@+id/switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/warner_active"
            android:textColor="@color/text"
            android:textSize="12sp"
            android:textStyle="bold"
            android:translationZ="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_warner" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_warner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text=""
            android:thumb="@drawable/switch_thumb"
            app:track="@drawable/switch_check"
            android:translationZ="15dp"
            app:layout_constraintBottom_toTopOf="@+id/adView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adView1"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/background_button_edit_home"
            android:fontFamily="@font/cairo_bold"
            android:paddingHorizontal="20dp"
            android:text="@string/edit_home"
            android:textAllCaps="false"
            android:textColor="#F4F4F4"
            android:textSize="13sp"

            android:translationZ="15dp"
            app:layout_constraintBottom_toTopOf="@+id/adView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_text"
            app:layout_constraintVertical_bias="0.513" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4955309752191404/7272141355"
            android:minHeight="50dp"
            android:layout_marginTop="15dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="250dp"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="ca-app-pub-4955309752191404/4319325325"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/includedLoadingPage"
        layout="@layout/loading_layout"
        android:visibility="gone" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        app:menu="@menu/drawer_menu"
        android:background="#F1F1F1"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:headerLayout="@layout/navigation_header"
        android:layout_gravity="start">
    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>